# giggle-ml

./: .envrc  .gitignore  CLAUDE.md  CV_WORKFLOW.md  README.md  Snakefile  config.yaml  environment.yml  flake.lock_  flake.nix  giggleML.sbatch  gml.yml  job.sbatch  justfile  pyproject.toml  requirements.txt  run.sh  sbatch.sh  sync
conda/: gml.yml
docs/: CV_WORKFLOW.md  datasets.md  designNotes.md  inferenceSystem.md  next.md
embedAnalysis/: scheffieldTests.md  sheffieldTestResults.md
experiments/entropy_analysis/: roadmap_epigenomics.md
experiments/roadmapEpigenomics/: rankAnalysis.tsv  rankAnalysis.txt
experiments/statTests/: testResults.txt
gpu_embeds/: README.md  block_distributed_sampler.py  from_fasta.py  from_genomic_benchmarks.py  inference_batch.py  inference_single.py  requirements.txt  truncated_dataset.py
scripts/: check_integrity.py  datasets.sh  diagnostic.npy  diagnostic.py  hparam_search.py  rank.py  readme.md  rme_rank_analysis.py  roadEpTripletFT.py  road_ep_triplet_ft.py  roadmapEpigenomicsEmbeds.py  roadmap_epigenomics_embeds.py  ruranges_test.py  seqpare_rme_hists.py  temp.py  test_evaluation.py  train.py  train_with_best_hparams.py
scripts/datasets/: rme_split.py  roadmap_epigenomics.md  seqpare_ranks.md
src/: __main__.py  embedModel.py  embedPipeline.py  embedPipeline.py_  embedSets.py  embedStatTests.py  entropy.py  geniml_exp.py  giggle.py  intervalTransformer.py  intervalTransforms.py  interval_transforms.py  regionAnalysis.py  regionAnalysis.py_  region_analysis.py  synthesis.py  umapAnalysis.py  umapAnalysis.py_  umap_analysis.py
src/analysis/: advHeatmap.py  adv_heatmap.py  embed_speed_test.py  interval_length_histogram.py  meanSubsamplingTest.py  mean_subsampling_test.py  model_loss.py  rme_model_score.py  rme_umap.py  synthesis.py  tilingTest.py  tiling_test.py  utils.py
src/dataWrangling/: fasta.py  genomicBenchmarkDataset.py  intervalDataset.py  seqDatasets.py  slidingWindowDataset.py  transformDataset.py
src/data_wrangling/: list_dataset.py  seq_datasets.py  sliding_window_dataset.py  swell_and_chunk_dataset.py  truncated_dataset.py
src/embedGen/: embedIO.py  embedPipeline.py  fromGenomicBenchmarks.py  gpuMaster.py  hyenadnaBackend.py  inferenceBatch.py  inferenceSingle.py  meanEmbedDict.py  region2vecWrapper.py  standaloneHyenadna.py
src/embedTests/: RCT.py  SWT.py
src/embed_gen/: block_distributed_sampler.py  from_genomic_benchmarks.py  hyenadna_backend.py  inference_batch.py  inference_single.py  region2vec_wrapper.py  standalone_hyenadna.py
src/embed_tests/: CTT.py  GDST.py  RCT.py  README.md  SWT.py  tests.py
src/giggleml/: giggle.py  giggle.py_  intervalTransformer.py  intervalTransforms.py  interval_transformer.py  interval_transforms.py  synthesis.py
src/gpu_embeds/: block_distributed_sampler.py  from_fasta.py  from_genomic_benchmarks.py  genomic_benchmark_dataset.py  hyenadna_backend.py  hyenadna_wrapper.py  inference_batch.py  region2vec_wrapper.py  standalone_hyenadna.py
src/scripts/: bedStats.py
src/statistical_tests/: CCT.py  CTT.py  (+6 more)
statistical_tests/: CCT.py  GDST.py  NPR.py  NPT.py  README.md  cluster_tendency_test.py  reconstruction_test.py
tests/: interval_transform.py_  test.bed  test.fa  testChunkDeChunk.py  testDataWrangling.py  testEmbedPipeline.py  testIntervalTransformer.py  testModels.py  test_all_gather_cat.py  test_chunk_de_chunk.py  test_data_wrangling.py  test_dist_scatter_mean.py  test_embed_pipeline.py  test_inference_batch.py  test_interval_transform.py  test_interval_transformer.py  test_models.py
wiki/: CV_WORKFLOW.md  datasets.md  state.md
workflow/: Snakefile  giggleBenchmark.smk  giggleLegacyExperiments.smk  giggleLegacyExperiments.smk_  makeEmbeds.smk  snakefile
(+5785 files in other folders)
